CHATS_SIT/force-app/main/default/objects/sfsit_t_sbsd_case_indiv_hist__x.object
<CustomObject>
    <description>sfsit$t_sbsd_case_indiv_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_sbsd_case_indiv_hist</externalName>
    <fields>
        <fullName>amt_income__c</fullName>
        <description>amt_income</description>
        <externalDeveloperName>amt_income</externalDeveloperName>
        <label>Income Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cde_change_reopen__c</fullName>
        <description>cde_change_reopen</description>
        <externalDeveloperName>cde_change_reopen</externalDeveloperName>
        <label>Reopen change code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
   <fields>
        <fullName>cde_rel_crtkr__c</fullName>
        <description>cde_rel_crtkr</description>
        <externalDeveloperName>cde_rel_crtkr</externalDeveloperName>
        <label>Care taker Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_rmvl__c</fullName>
        <description>cde_rmvl</description>
        <externalDeveloperName>cde_rmvl</externalDeveloperName>
        <label>Removal Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_source_vrfyd_rel__c</fullName>
        <description>cde_source_vrfyd_rel</description>
        <externalDeveloperName>cde_source_vrfyd_rel</externalDeveloperName>
        <label>Code source relationship verified</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_vrfyd_rel__c</fullName>
        <description>cde_vrfyd_rel</description>
        <externalDeveloperName>cde_vrfyd_rel</externalDeveloperName>
        <label>Relationship verification code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_begin_effv__c</fullName>
        <description>dte_begin_effv</description>
        <externalDeveloperName>dte_begin_effv</externalDeveloperName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_begin_eligty_cc__c</fullName>
        <description>dte_begin_eligty_cc</description>
        <externalDeveloperName>dte_begin_eligty_cc</externalDeveloperName>
        <label>Eligibility CC begin date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_end_effv__c</fullName>
        <description>dte_end_effv</description>
        <externalDeveloperName>dte_end_effv</externalDeveloperName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_end_eligty_cc__c</fullName>
        <description>dte_end_eligty_cc</description>
        <externalDeveloperName>dte_end_eligty_cc</externalDeveloperName>
        <label>Eligibility CC end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_case__c</fullName>
        <description>idn_case</description>
        <externalDeveloperName>idn_case</externalDeveloperName>
        <label>case id</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_case_indiv__c</fullName>
        <description>idn_case_indiv</description>
        <externalDeveloperName>idn_case_indiv</externalDeveloperName>
        <label>Case Individual ID</label>
        <length>50</length>
        <referenceTargetField>T_SBSD_CASE_INDIV__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_SBSD_CASE_INDIV__c</referenceTo>
        <relationshipLabel>Case Individual Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_sbsd_case_indiv_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_case_indiv_hist__c</fullName>
        <description>idn_case_indiv_hist</description>
        <externalDeveloperName>idn_case_indiv_hist</externalDeveloperName>
        <label>Case Individual ID History</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_client__c</fullName>
        <description>idn_client</description>
        <externalDeveloperName>idn_client</externalDeveloperName>
        <label>Individual id</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_sbsd_case_indiv_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_crtkr__c</fullName>
        <description>ind_crtkr</description>
        <externalDeveloperName>ind_crtkr</externalDeveloperName>
        <label>care taker?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_prtcptn_end__c</fullName>
        <description>ind_prtcptn_end</description>
        <externalDeveloperName>ind_prtcptn_end</externalDeveloperName>
        <label>Participation ended?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>logical delete indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_wtlst_skip__c</fullName>
        <description>ind_wtlst_skip</description>
        <externalDeveloperName>ind_wtlst_skip</externalDeveloperName>
        <label>waitlist skip indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_indiv_legacy__c</fullName>
        <description>nbr_indiv_legacy</description>
        <externalDeveloperName>nbr_indiv_legacy</externalDeveloperName>
        <label>legacy indiv number</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_indiv_case__c</fullName>
        <description>nbr_seq_indiv_case</description>
        <externalDeveloperName>nbr_seq_indiv_case</externalDeveloperName>
        <label>Number Sequence Indiv case</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Case Individual History</label>
    <pluralLabel>Case Individual History</pluralLabel>
</CustomObject>